--- a/MyTrax/RegisterOwnerVC/RegisterOwnerVC.xib
+++ b/MyTrax/RegisterOwnerVC/RegisterOwnerVC.xib
@@ -8,6 +8,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Black</string>
+        </array>
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterOwnerVC" customModule="MyTrax" customModuleProvider="target">
             <connections>
@@ -67,15 +75,29 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSy-B6-VWI">
-                    <rect key="frame" x="159" y="361" width="57" height="30"/>
+                    <rect key="frame" x="153.5" y="361" width="68" height="36"/>
+                    <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="17"/>
                     <state key="normal" title="Register"/>
                     <connections>
                         <action selector="registerButtonAction:" destination="-1" eventType="touchUpInside" id="xSu-RP-ZHh"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="you can fill your info with" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tyr-7x-qd6">
+                    <rect key="frame" x="16" y="405" width="343" height="20.5"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E45-AG-oVo">
-                    <rect key="frame" x="154" y="399" width="67" height="30"/>
-                    <state key="normal" title="Facebook"/>
+                    <rect key="frame" x="50" y="433" width="275" height="40"/>
+                    <color key="backgroundColor" red="0.0" green="0.40337687791885374" blue="0.71319796954314718" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="YRV-Sj-sXz"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="19"/>
+                    <state key="normal" title="facebook">
+                        <color key="titleColor" red="0.9823064622033898" green="1" blue="0.97879808435100124" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
                     <connections>
                         <action selector="facebookLogin:" destination="-1" eventType="touchUpInside" id="DFM-cm-gU7"/>
                     </connections>
@@ -88,8 +110,13 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Wx4-m2-gR3" secondAttribute="trailing" constant="16" id="OUX-ke-hI9"/>
                 <constraint firstItem="Wx4-m2-gR3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="PLc-H8-6LO"/>
                 <constraint firstItem="bSy-B6-VWI" firstAttribute="top" secondItem="Wev-8p-6ue" secondAttribute="bottom" constant="20" id="aHe-Z3-dh9"/>
+                <constraint firstItem="Tyr-7x-qd6" firstAttribute="top" secondItem="bSy-B6-VWI" secondAttribute="bottom" constant="8" id="bzO-Lt-EK6"/>
+                <constraint firstItem="E45-AG-oVo" firstAttribute="top" secondItem="Tyr-7x-qd6" secondAttribute="bottom" constant="8" id="dTo-8K-YiY"/>
                 <constraint firstItem="Wx4-m2-gR3" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-100" id="djl-kB-mVK"/>
-                <constraint firstItem="E45-AG-oVo" firstAttribute="top" secondItem="bSy-B6-VWI" secondAttribute="bottom" constant="8" id="h6g-ds-uvX"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Tyr-7x-qd6" secondAttribute="trailing" constant="16" id="iL7-t4-2MZ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="E45-AG-oVo" secondAttribute="trailing" constant="50" id="oEj-lQ-Im6"/>
+                <constraint firstItem="Tyr-7x-qd6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ooW-Or-PRr"/>
+                <constraint firstItem="E45-AG-oVo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="vQ1-Xp-1bP"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="32.5" y="101.5"/>
