--- a/MyTrax/RegisterVC/RegisterVC.xib
+++ b/MyTrax/RegisterVC/RegisterVC.xib
@@ -39,7 +39,7 @@
                         <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
-                        <action selector="registerButtonAction:" destination="-1" eventType="touchUpInside" id="xSu-RP-ZHh"/>
+                        <action selector="emailButtonAction:" destination="-1" eventType="touchUpInside" id="JkM-qZ-rMf"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E45-AG-oVo">
