--- a/MyTrax/EmailRegistrationVC/EmailRegistrationVC.xib
+++ b/MyTrax/EmailRegistrationVC/EmailRegistrationVC.xib
@@ -30,13 +30,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="SNm-du-bsn">
-                    <rect key="frame" x="16" y="70" width="343" height="100"/>
+                    <rect key="frame" x="16" y="283.5" width="343" height="100"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sib-T2-623">
                             <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="maF-xi-Llb">
                             <rect key="frame" x="0.0" y="35" width="343" height="30"/>
@@ -53,7 +53,7 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FiU-sj-x11">
-                    <rect key="frame" x="50" y="220" width="275" height="36"/>
+                    <rect key="frame" x="50" y="433.5" width="275" height="36"/>
                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                     <state key="normal" title="REGISTER">
                         <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -66,11 +66,11 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FiU-sj-x11" secondAttribute="trailing" constant="50" id="39T-no-NvM"/>
+                <constraint firstItem="SNm-du-bsn" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="G1X-Qp-c5T"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SNm-du-bsn" secondAttribute="trailing" constant="16" id="Jwd-Qp-IU8"/>
                 <constraint firstItem="FiU-sj-x11" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="ccr-gx-XiW"/>
                 <constraint firstItem="FiU-sj-x11" firstAttribute="top" secondItem="9eY-iD-RJg" secondAttribute="bottom" constant="50" id="eog-DC-EwR"/>
                 <constraint firstItem="SNm-du-bsn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="sxa-GD-5El"/>
-                <constraint firstItem="SNm-du-bsn" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="50" id="tL4-jF-igk"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
