--- a/MyTrax/EmailRegistrationVC/EmailRegistrationVC.xib
+++ b/MyTrax/EmailRegistrationVC/EmailRegistrationVC.xib
@@ -9,18 +9,10 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="AvenirNext.ttc">
-            <string>AvenirNext-Regular</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailRegistrationVC" customModule="MyTrax" customModuleProvider="target">
             <connections>
-                <outlet property="emailField" destination="sib-T2-623" id="jRU-ZQ-xxQ"/>
-                <outlet property="passwordField" destination="maF-xi-Llb" id="uBO-bz-lL4"/>
-                <outlet property="rePasswordField" destination="9eY-iD-RJg" id="qu4-wq-Pe4"/>
-                <outlet property="registerButtonOutlet" destination="FiU-sj-x11" id="U5C-UI-ehn"/>
+                <outlet property="tableView" destination="ZZa-Gz-Hhh" id="bUu-m1-Lnc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -29,48 +21,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="SNm-du-bsn">
-                    <rect key="frame" x="16" y="283.5" width="343" height="100"/>
-                    <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sib-T2-623">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
-                        </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="maF-xi-Llb">
-                            <rect key="frame" x="0.0" y="35" width="343" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                        </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="retype password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9eY-iD-RJg">
-                            <rect key="frame" x="0.0" y="70" width="343" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                        </textField>
-                    </subviews>
-                </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FiU-sj-x11">
-                    <rect key="frame" x="50" y="433.5" width="275" height="36"/>
-                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                    <state key="normal" title="REGISTER">
-                        <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="registerButtonAction:" destination="-1" eventType="touchUpInside" id="V3D-VI-tac"/>
-                    </connections>
-                </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZZa-Gz-Hhh">
+                    <rect key="frame" x="0.0" y="120" width="375" height="447"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FiU-sj-x11" secondAttribute="trailing" constant="50" id="39T-no-NvM"/>
-                <constraint firstItem="SNm-du-bsn" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="G1X-Qp-c5T"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SNm-du-bsn" secondAttribute="trailing" constant="16" id="Jwd-Qp-IU8"/>
-                <constraint firstItem="FiU-sj-x11" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="ccr-gx-XiW"/>
-                <constraint firstItem="FiU-sj-x11" firstAttribute="top" secondItem="9eY-iD-RJg" secondAttribute="bottom" constant="50" id="eog-DC-EwR"/>
-                <constraint firstItem="SNm-du-bsn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="sxa-GD-5El"/>
+                <constraint firstItem="ZZa-Gz-Hhh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="K30-y9-t42"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZZa-Gz-Hhh" secondAttribute="trailing" id="RkM-RR-fn2"/>
+                <constraint firstItem="ZZa-Gz-Hhh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="axl-5i-Te1"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ZZa-Gz-Hhh" secondAttribute="bottom" constant="100" id="dK3-Mh-Nk0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
