Email logo added to Registration form

--- a/MyTrax/EmailRegistrationVC/EmailRegistrationVC.xib
+++ b/MyTrax/EmailRegistrationVC/EmailRegistrationVC.xib
@@ -22,16 +22,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZZa-Gz-Hhh">
-                    <rect key="frame" x="0.0" y="120" width="375" height="447"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="ZZa-Gz-Hhh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="K30-y9-t42"/>
+                <constraint firstItem="ZZa-Gz-Hhh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="K30-y9-t42"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZZa-Gz-Hhh" secondAttribute="trailing" id="RkM-RR-fn2"/>
                 <constraint firstItem="ZZa-Gz-Hhh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="axl-5i-Te1"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ZZa-Gz-Hhh" secondAttribute="bottom" constant="100" id="dK3-Mh-Nk0"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ZZa-Gz-Hhh" secondAttribute="bottom" id="dK3-Mh-Nk0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
