--- a/MyTrax/PersonalInfoVC/PersonalInfoVC.xib
+++ b/MyTrax/PersonalInfoVC/PersonalInfoVC.xib
@@ -10,11 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OwnerFormRegistrationVC" customModule="MyTrax" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PersonalInfoVC" customModule="MyTrax" customModuleProvider="target">
             <connections>
-                <outlet property="emailField" destination="4i8-CS-HjU" id="Rrg-6s-ZRn"/>
-                <outlet property="firstNameField" destination="YB0-HN-osa" id="eHt-Jg-Oes"/>
-                <outlet property="lastNameField" destination="Afv-DE-UcF" id="4ls-Iy-Nna"/>
+                <outlet property="tableView" destination="pTd-EL-rcE" id="ub8-kj-Wye"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,43 +21,19 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="SRO-X5-GOr">
-                    <rect key="frame" x="16" y="70" width="343" height="65"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="CwP-O1-E8i">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
-                            <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YB0-HN-osa">
-                                    <rect key="frame" x="0.0" y="0.0" width="169" height="30"/>
-                                    <nil key="textColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Afv-DE-UcF">
-                                    <rect key="frame" x="174" y="0.0" width="169" height="30"/>
-                                    <nil key="textColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                            </subviews>
-                        </stackView>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-CS-HjU">
-                            <rect key="frame" x="0.0" y="35" width="343" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                    </subviews>
-                </stackView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pTd-EL-rcE">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="SRO-X5-GOr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Hce-yU-VtB"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SRO-X5-GOr" secondAttribute="trailing" constant="16" id="ZH1-pH-j1R"/>
-                <constraint firstItem="SRO-X5-GOr" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="50" id="kvi-Xy-RCy"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pTd-EL-rcE" secondAttribute="trailing" id="4XK-tS-YIE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="pTd-EL-rcE" secondAttribute="bottom" id="ZkT-iw-Fk5"/>
+                <constraint firstItem="pTd-EL-rcE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="bDr-5A-d0y"/>
+                <constraint firstItem="pTd-EL-rcE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="naV-em-2HG"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="32.5" y="97.5"/>
         </view>
     </objects>
 </document>
