--- a/MyTrax/PersonalInfoVC/InfoLogoCell/InfoLogoCell.xib
+++ b/MyTrax/PersonalInfoVC/InfoLogoCell/InfoLogoCell.xib
@@ -12,29 +12,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="LogoCell" customModule="MyTrax" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="InfoLogoCell" customModule="MyTrax" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="email icon" translatesAutoresizingMaskIntoConstraints="NO" id="0Yg-iP-kFg">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="personalInfoLogo" translatesAutoresizingMaskIntoConstraints="NO" id="WNn-s9-sJ5">
                         <rect key="frame" x="5" y="30" width="310" height="99.5"/>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0Yg-iP-kFg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="D2c-bY-kcH"/>
-                    <constraint firstAttribute="trailing" secondItem="0Yg-iP-kFg" secondAttribute="trailing" constant="5" id="Vgt-E9-LHd"/>
-                    <constraint firstItem="0Yg-iP-kFg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="ZVS-Qe-07b"/>
-                    <constraint firstAttribute="bottom" secondItem="0Yg-iP-kFg" secondAttribute="bottom" constant="20" id="oOG-7o-XWC"/>
+                    <constraint firstItem="WNn-s9-sJ5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="ACc-p3-qfx"/>
+                    <constraint firstItem="WNn-s9-sJ5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="JZ1-F5-QW2"/>
+                    <constraint firstAttribute="trailing" secondItem="WNn-s9-sJ5" secondAttribute="trailing" constant="5" id="RJE-9x-bAa"/>
+                    <constraint firstAttribute="bottom" secondItem="WNn-s9-sJ5" secondAttribute="bottom" constant="20" id="p6D-5X-ZcO"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="44" y="176"/>
+            <point key="canvasLocation" x="90" y="132"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="email icon" width="474" height="474"/>
+        <image name="personalInfoLogo" width="473" height="516"/>
     </resources>
 </document>
