--- a/MyTrax/PersonalInfoVC/PersonalInfoVC.xib
+++ b/MyTrax/PersonalInfoVC/PersonalInfoVC.xib
@@ -21,17 +21,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pTd-EL-rcE">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pTd-EL-rcE">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pTd-EL-rcE" secondAttribute="trailing" id="4XK-tS-YIE"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="pTd-EL-rcE" secondAttribute="bottom" id="ZkT-iw-Fk5"/>
-                <constraint firstItem="pTd-EL-rcE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="bDr-5A-d0y"/>
-                <constraint firstItem="pTd-EL-rcE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="naV-em-2HG"/>
+                <constraint firstItem="pTd-EL-rcE" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="Cyc-2m-ABT"/>
+                <constraint firstItem="pTd-EL-rcE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Z11-Ab-ixe"/>
+                <constraint firstItem="pTd-EL-rcE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="gdC-ye-x1O"/>
+                <constraint firstItem="pTd-EL-rcE" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="z2r-m6-2ce"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
