PhoneTextField content type changed

--- a/MyTrax/PersonalInfoVC/PersonalInfoCell/PersonalInfoCell.xib
+++ b/MyTrax/PersonalInfoVC/PersonalInfoCell/PersonalInfoCell.xib
@@ -21,13 +21,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="g9r-cE-oZP">
-                        <rect key="frame" x="28" y="13" width="264" height="128"/>
+                        <rect key="frame" x="20" y="5" width="280" height="128"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5RR-Ba-uGT">
-                                <rect key="frame" x="0.0" y="0.0" width="264" height="36"/>
+                                <rect key="frame" x="0.0" y="0.0" width="280" height="36"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MBY-aN-pSE">
-                                        <rect key="frame" x="0.0" y="0.0" width="127" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="135" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="I7O-Ea-3LK"/>
                                         </constraints>
@@ -36,7 +36,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uec-c4-jSA">
-                                        <rect key="frame" x="137" y="0.0" width="127" height="36"/>
+                                        <rect key="frame" x="145" y="0.0" width="135" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="3SF-Qw-hKg"/>
                                         </constraints>
@@ -47,7 +47,7 @@
                                 </subviews>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ym3-mW-hIX">
-                                <rect key="frame" x="0.0" y="46" width="264" height="36"/>
+                                <rect key="frame" x="0.0" y="46" width="280" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="teO-9y-8Cg"/>
                                 </constraints>
@@ -56,18 +56,21 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="phone number format: 07xxx xxxxxx" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lSy-4C-8DF">
-                                <rect key="frame" x="0.0" y="92" width="264" height="36"/>
+                                <rect key="frame" x="0.0" y="92" width="280" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="vZn-r8-yBA"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="tel"/>
                             </textField>
                         </subviews>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5VG-6z-CVK">
-                        <rect key="frame" x="58" y="171" width="204" height="30"/>
+                        <rect key="frame" x="58" y="163" width="204" height="36"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="36" id="TgE-Ip-qoC"/>
+                        </constraints>
                         <state key="normal" title="ONE MORE STEP">
                             <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
@@ -78,10 +81,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="5VG-6z-CVK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="50" id="Hw0-C9-VOB"/>
+                    <constraint firstAttribute="trailing" secondItem="g9r-cE-oZP" secondAttribute="trailing" constant="20" id="RwG-pC-V3V"/>
+                    <constraint firstItem="g9r-cE-oZP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="U8e-h0-dyx"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5VG-6z-CVK" secondAttribute="trailing" constant="50" id="g6k-Xt-vmh"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="g9r-cE-oZP" secondAttribute="trailing" constant="20" id="k2o-ky-fsi"/>
-                    <constraint firstItem="g9r-cE-oZP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="nF8-Kw-C8b"/>
-                    <constraint firstItem="g9r-cE-oZP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="rbz-lW-Gqc"/>
+                    <constraint firstItem="g9r-cE-oZP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ocG-iZ-yUA"/>
                     <constraint firstItem="5VG-6z-CVK" firstAttribute="top" secondItem="lSy-4C-8DF" secondAttribute="bottom" constant="30" id="wrP-IQ-SLk"/>
                 </constraints>
             </tableViewCellContentView>
