--- a/MyTrax/EmailRegistrationVC/New Group/EmailRegistrationCell.xib
+++ b/MyTrax/EmailRegistrationVC/New Group/EmailRegistrationCell.xib
@@ -52,7 +52,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                         </subviews>
                     </stackView>
