--- a/MyTrax/PersonalInfoVC/PersonalInfoCell/PersonalInfoCell.xib
+++ b/MyTrax/PersonalInfoVC/PersonalInfoCell/PersonalInfoCell.xib
@@ -71,7 +71,7 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="36" id="TgE-Ip-qoC"/>
                         </constraints>
-                        <state key="normal" title="ONE MORE STEP">
+                        <state key="normal" title="NEXT">
                             <color key="titleColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
                         <connections>
