--- a/MyTrax/RegisterVC/RegisterVC.xib
+++ b/MyTrax/RegisterVC/RegisterVC.xib
@@ -32,7 +32,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSy-B6-VWI">
-                    <rect key="frame" x="50" y="432.5" width="275" height="36"/>
+                    <rect key="frame" x="50" y="442" width="275" height="36"/>
                     <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                     <state key="normal" title="EMAIL">
@@ -43,7 +43,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E45-AG-oVo">
-                    <rect key="frame" x="50" y="484.5" width="275" height="36"/>
+                    <rect key="frame" x="50" y="494" width="275" height="36"/>
                     <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                     <state key="normal" title="FACEBOOK">
@@ -61,7 +61,7 @@
                     </state>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="already have an account?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNY-fl-Z85">
-                    <rect key="frame" x="100.5" y="530.5" width="173" height="21"/>
+                    <rect key="frame" x="100.5" y="540" width="173" height="21"/>
                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -90,7 +90,7 @@
             <constraints>
                 <constraint firstItem="E45-AG-oVo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="5FW-Fd-dax"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Fhx-oo-7Im" secondAttribute="bottom" constant="70" id="8K7-93-chw"/>
-                <constraint firstItem="Fhx-oo-7Im" firstAttribute="top" secondItem="GNY-fl-Z85" secondAttribute="bottom" constant="10" id="BFD-hN-As5"/>
+                <constraint firstItem="Fhx-oo-7Im" firstAttribute="top" secondItem="GNY-fl-Z85" secondAttribute="bottom" id="BFD-hN-As5"/>
                 <constraint firstItem="E45-AG-oVo" firstAttribute="top" secondItem="bSy-B6-VWI" secondAttribute="bottom" constant="16" id="C15-Vv-QSY"/>
                 <constraint firstItem="GNY-fl-Z85" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="CLT-Ks-nB7"/>
                 <constraint firstItem="GNY-fl-Z85" firstAttribute="top" secondItem="E45-AG-oVo" secondAttribute="bottom" constant="10" id="EOJ-5b-Yvk"/>
