--- a/MyTrax/WelcomeVC/WelcomeVC.xib
+++ b/MyTrax/WelcomeVC/WelcomeVC.xib
@@ -64,7 +64,7 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01E-BO-C1r">
                             <rect key="frame" x="178" y="0.0" width="165" height="36"/>
                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                            <state key="normal" title="BIKER">
+                            <state key="normal" title="RIDER">
                                 <color key="titleColor" red="0.73333333333333328" green="0.76470588235294112" blue="0.77647058823529413" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
@@ -100,6 +100,6 @@
         </view>
     </objects>
     <resources>
-        <image name="MyTraxIcon" width="638" height="613"/>
+        <image name="MyTraxIcon" width="502" height="502"/>
     </resources>
 </document>
